--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -30,5 +30,5 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --org=the-guardian-cuu --project-name=guardian/manage-frontend --file=./app/yarn.lock
+          args: --org=the-guardian-cuu --project-name=${{ github.repository }} --file=./app/yarn.lock
           command: monitor
