--- a/app/package.json
+++ b/app/package.json
@@ -75,7 +75,6 @@
     "@types/prettier": "^1.19.0",
     "@types/reach__router": "^1.2.2",
     "@types/react": "^16.8.23",
-    "@types/react-daterange-picker": "^2.0.1",
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.8.2",
     "@types/url-parse": "^1.4.3",
@@ -144,18 +143,16 @@
     "color": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
+    "date-fns": "^2.16.1",
     "express": "^4.16.3",
     "formik": "^1.5.8",
     "helmet": "^3.23.3",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
-    "moment": "^2.18.1",
-    "moment-range": "^3.0.3",
     "node-fetch": "^2.6.1",
     "number-to-words": "^1.2.4",
     "ophan-tracker-js": "^1.3.16",
     "react": "^16.13.1",
-    "react-daterange-picker": "^2.0.1",
     "react-dom": "^16.13.1",
     "source-map-support": "^0.5.19",
     "stylis-pxtorem": "^0.0.2",
