--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "start": "nodemon --inspect ./dist/server",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit --skipLibCheck",
     "pretty-quick": "pretty-quick",
-    "lint": "tslint -p .",
+    "lint": "eslint 'client/**' 'server/**' 'shared/**'",
     "bundle": "copy-node-modules . ./dist && yarn webpack --config webpack.production.js",
     "bundle-dev": "yarn bundle-dev-server && yarn bundle-dev-client",
     "bundle-dev-server": "webpack --config webpack.dev.server.js",
@@ -18,7 +18,7 @@
     "jest": "jest",
     "updateSnapshot": "jest -u",
     "sonar-scanner": "cd .. && app/node_modules/sonar-scanner/bin/sonar-scanner -Dsonar.projectVersion=$(git rev-parse --short HEAD)",
-    "fix": "pretty-quick --staged && tslint --fix -p .",
+    "fix": "pretty-quick --staged && eslint --fix 'client/**' 'server/**' 'shared/**'",
     "snyk-protect": "snyk protect",
     "prepublish": "yarn run snyk-protect",
     "storybook": "start-storybook -p 6006",
@@ -88,6 +88,8 @@
     "@types/webpack-merge": "^4.1.5",
     "@types/webpack-node-externals": "^1.7.1",
     "@types/yup": "^0.26.23",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "assets-webpack-plugin": "^3.10.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.6",
@@ -98,6 +100,8 @@
     "dom-testing-library": "^2.3.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.25.3",
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^1.3.1",
     "jest": "^26.3.0",
@@ -113,10 +117,6 @@
     "snyk": "^1.587.0",
     "sonar-scanner": "^3.1.0",
     "ts-jest": "^26.2.0",
-    "tslint": "^5.12.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-immutable": "^5.1.2",
-    "tslint-react": "^3.6.0",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
