--- a/app/package.json
+++ b/app/package.json
@@ -158,6 +158,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-error-boundary": "^3.1.3",
+    "react-fetching-library": "^1.7.6",
     "source-map-support": "^0.5.19",
     "stylis-pxtorem": "^0.0.2",
     "url-parse": "^1.5.3",
