--- a/app/package.json
+++ b/app/package.json
@@ -164,6 +164,7 @@
     "react-fetching-library": "^1.7.6",
     "source-map-support": "^0.5.19",
     "stylis-pxtorem": "^0.0.2",
+    "swr": "^1.0.1",
     "url-parse": "^1.5.3",
     "webpack-node-externals": "^1.7.2",
     "winston": "^3.2.1",
