--- a/app/package.json
+++ b/app/package.json
@@ -100,6 +100,7 @@
     "enzyme-adapter-react-16": "^1.15.4",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.3",
+    "fetch-mock": "^9.11.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^1.3.1",
     "jest": "^26.3.0",
