--- a/app/package.json
+++ b/app/package.json
@@ -43,13 +43,14 @@
     "OperaMini all"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
+    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@guardian/node-riffraff-artifact": "^0.2.1",
     "@storybook/addon-actions": "^6.3.7",
@@ -88,22 +89,20 @@
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "assets-webpack-plugin": "^3.10.0",
-    "babel-jest": "^27.3.1",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-source-map-support": "^2.1.1",
     "copy-node-modules": "^1.0.4",
     "copy-webpack-plugin": "^4.6.0",
-    "core-js": "^3.19.1",
     "dom-testing-library": "^2.3.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.3",
-    "fetch-mock": "^9.11.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "husky": "^1.3.1",
-    "jest": "^27.3.1",
+    "jest": "^26.3.0",
     "jest-each": "^26.6.2",
     "jest-emotion": "^10.0.32",
     "jest-teamcity-reporter": "^0.9.0",
@@ -114,8 +113,8 @@
     "react-test-renderer": "^16.13.1",
     "react-testing-library": "^3.1.7",
     "sonar-scanner": "^3.1.0",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4",
+    "ts-jest": "^26.2.0",
+    "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
@@ -158,11 +157,8 @@
     "ophan-tracker-js": "^1.3.16",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-error-boundary": "^3.1.3",
-    "regenerator-runtime": "^0.13.9",
     "source-map-support": "^0.5.19",
     "stylis-pxtorem": "^0.0.2",
-    "swr": "^1.0.1",
     "url-parse": "^1.5.3",
     "webpack-node-externals": "^1.7.2",
     "winston": "^3.2.1",
