--- a/app/package.json
+++ b/app/package.json
@@ -43,14 +43,13 @@
     "OperaMini all"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
-    "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@guardian/node-riffraff-artifact": "^0.2.1",
     "@storybook/addon-actions": "^6.3.7",
@@ -95,6 +94,7 @@
     "babel-plugin-source-map-support": "^2.1.1",
     "copy-node-modules": "^1.0.4",
     "copy-webpack-plugin": "^4.6.0",
+    "core-js": "^3.19.1",
     "dom-testing-library": "^2.3.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
@@ -157,6 +157,7 @@
     "ophan-tracker-js": "^1.3.16",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "regenerator-runtime": "^0.13.9",
     "source-map-support": "^0.5.19",
     "stylis-pxtorem": "^0.0.2",
     "url-parse": "^1.5.3",
