--- a/app/package.json
+++ b/app/package.json
@@ -89,6 +89,7 @@
     "assets-webpack-plugin": "^7.1.1",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.0.6",
+    "babel-loader-exclude-node-modules-except": "^1.2.1",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-source-map-support": "^2.1.1",
     "copy-node-modules": "^1.0.4",
@@ -161,7 +162,6 @@
     "source-map-support": "^0.5.19",
     "stylis-pxtorem": "^0.0.2",
     "url-parse": "^1.5.3",
-    "webpack-node-externals": "^3.0.0",
     "winston": "^3.2.1",
     "yup": "^0.28.2"
   },
