--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@ coverage/
 *.code-workspace
 
 .vscode/
- 
 
 logs/
 /app/node_modules/
@@ -26,3 +25,5 @@ tmp_client_bundle/
 .DS_Store
 .scannerwork/
 app/test-report.xml
+
+storybook-static
