Add version resolutions for `chokidar` and `micromatch`

--- a/app/package.json
+++ b/app/package.json
@@ -168,5 +168,9 @@
     "winston": "^3.2.1",
     "yup": "^0.28.2"
   },
+  "resolutions": {
+    "chokidar": "^3.5.2",
+    "micromatch": "^4.0.4"
+  },
   "license": "UNLICENSED"
 }
