--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,11 @@
     "sonar-scanner": "cd .. && app/node_modules/sonar-scanner/bin/sonar-scanner -Dsonar.projectVersion=$(git rev-parse --short HEAD)",
     "fix": "pretty-quick --staged && eslint --fix 'client/**' 'server/**' 'shared/**'",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "cypress:open": "DEBUG=cypress:* cypress open",
+    "cypress:run": "cypress run",
+    "cypress:run:e2e": "cypress run --spec 'cypress/integration/e2e/**/*'",
+    "cypress:run:mocked": "cypress run --spec 'cypress/integration/mocked/**/*'"
   },
   "husky": {
     "hooks": {
@@ -50,8 +54,10 @@
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@cypress/webpack-preprocessor": "^5.11.0",
     "@emotion/babel-preset-css-prop": "^10.2.1",
     "@guardian/node-riffraff-artifact": "^0.2.2",
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.1.0",
     "@types/assets-webpack-plugin": "^7.1.0",
@@ -92,6 +98,8 @@
     "copy-node-modules": "^1.0.4",
     "copy-webpack-plugin": "^9.1.0",
     "core-js": "^3.19.1",
+    "cypress": "^9.3.1",
+    "cypress-plugin-stripe-elements": "^1.0.2",
     "dom-testing-library": "^2.3.2",
     "emotion-theming": "10.3.0",
     "enzyme": "^3.11.0",
