--- a/app/package.json
+++ b/app/package.json
@@ -84,6 +84,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.8.2",
     "@types/url-parse": "^1.4.3",
+    "@types/uuid": "^8.3.4",
     "@types/webpack": "^5.28.0",
     "@types/webpack-node-externals": "^2.5.3",
     "@types/yup": "^0.26.23",
@@ -123,6 +124,7 @@
     "sonar-scanner": "^3.1.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
+    "uuid": "^8.3.2",
     "webpack": "^5.64.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
