--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,20 +5,33 @@ jobs:
   cypress:
     name: Manage-frontend Cypress
     runs-on: ubuntu-20.04
+
     permissions:
       id-token: write
       contents: read
+
     strategy:
       fail-fast: false
       matrix:
         group: [1, 2, 3, 4, 5, 6]
+
     steps:
       - uses: guardian/actions-assume-aws-role@v1.0.0
         with:
           awsRoleToAssume: ${{ secrets.MANAGE_FRONTEND_IAM_ROLE }}
-      - run: aws s3 cp s3://gu-reader-revenue-private/manage-frontend/CODE/idapi-CODE.json .
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version-file: ".nvmrc"
+          cache: "yarn"
+
       - name: Cypress run
         uses: cypress-io/github-action@v2
+        env:
+          IDAPI_CLIENT_ACCESS_TOKEN: ${{ secrets.IDAPI_CLIENT_ACCESS_TOKEN }}
         with:
           build: yarn bundle-dev
           start: yarn start
