--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -33,8 +33,7 @@ jobs:
           IDAPI_CLIENT_ACCESS_TOKEN: ${{ secrets.IDAPI_CLIENT_ACCESS_TOKEN }}
         with:
           working-directory: app
-          build: yarn bundle-dev
-          start: yarn start
+          start: yarn watch
           wait-on: "http://localhost:9233"
           wait-on-timeout: 30
           quiet: true
