--- a/app/package.json
+++ b/app/package.json
@@ -103,6 +103,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "eslint": "^7.32.0",
+    "eslint-plugin-jest": "^26.1.0",
     "eslint-plugin-react": "^7.25.3",
     "fetch-mock": "^9.11.0",
     "git-revision-webpack-plugin": "^3.0.6",
