--- a/app/package.json
+++ b/app/package.json
@@ -59,11 +59,12 @@
     "@cypress/webpack-preprocessor": "^5.11.1",
     "@emotion/babel-preset-css-prop": "^10.2.1",
     "@guardian/node-riffraff-artifact": "^0.2.2",
-    "@testing-library/cypress": "^8.0.2",
+    "@guardian/prettier": "^1.0.0",
     "@storybook/addon-essentials": "^6.4.10",
     "@storybook/builder-webpack5": "^6.4.10",
     "@storybook/manager-webpack5": "^6.4.10",
     "@storybook/react": "^6.4.10",
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.1.0",
     "@types/assets-webpack-plugin": "^7.1.0",
