--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -19,9 +19,10 @@ jobs:
         group: [1, 2, 3, 4, 5, 6]
 
     steps:
-      - uses: guardian/actions-assume-aws-role@v1.0.0
+      - uses: aws-actions/configure-aws-credentials@v1
         with:
-          awsRoleToAssume: ${{ secrets.MANAGE_FRONTEND_IAM_ROLE }}
+          role-to-assume: ${{ secrets.MANAGE_FRONTEND_IAM_ROLE }}
+          aws-region: eu-west-1
 
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v2
