--- a/app/package.json
+++ b/app/package.json
@@ -128,7 +128,7 @@
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.2",
     "raw-loader": "^4.0.2",
-    "react-test-renderer": "^16.14.0",
+    "react-test-renderer": "17.0.2",
     "sonar-scanner": "^3.1.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
@@ -173,8 +173,8 @@
     "node-fetch": "^2.6.7",
     "number-to-words": "^1.2.4",
     "ophan-tracker-js": "^1.3.16",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "regenerator-runtime": "^0.13.9",
