--- a/app/package.json
+++ b/app/package.json
@@ -84,9 +84,9 @@
     "@types/node-fetch": "^1.6.9",
     "@types/number-to-words": "^1.2.0",
     "@types/prettier": "^2.4.2",
-    "@types/react": "^16.14.23",
-    "@types/react-dom": "^16.9.14",
-    "@types/react-test-renderer": "^16.9.5",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-test-renderer": "^17.0.2",
     "@types/url-parse": "^1.4.3",
     "@types/uuid": "^8.3.4",
     "@types/webpack": "^5.28.0",
@@ -124,7 +124,7 @@
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.2",
     "raw-loader": "^4.0.2",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "^17.0.2",
     "sonar-scanner": "^3.1.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
@@ -169,7 +169,7 @@
     "node-fetch": "^2.6.7",
     "number-to-words": "^1.2.4",
     "ophan-tracker-js": "^1.3.16",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
