--- a/app/package.json
+++ b/app/package.json
@@ -57,7 +57,8 @@
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@cypress/webpack-preprocessor": "^5.11.1",
-    "@emotion/babel-preset-css-prop": "^10.2.1",
+    "@emotion/babel-plugin": "^11.9.2",
+    "@emotion/jest": "^11.9.1",
     "@guardian/node-riffraff-artifact": "^0.2.2",
     "@guardian/prettier": "^1.0.0",
     "@storybook/addon-essentials": "^6.4.10",
@@ -106,7 +107,6 @@
     "core-js": "^3.19.1",
     "cypress": "8.5.0",
     "cypress-plugin-stripe-elements": "^1.0.2",
-    "emotion-theming": "10.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^26.1.0",
@@ -116,7 +116,6 @@
     "husky": "^1.3.1",
     "jest": "^27.3.1",
     "jest-each": "^26.6.2",
-    "jest-emotion": "^10.0.32",
     "jest-teamcity-reporter": "^0.9.0",
     "mini-css-extract-plugin": "^2.5.2",
     "node-polyfill-webpack-plugin": "^1.1.4",
@@ -137,7 +136,7 @@
     "whatwg-fetch": "^2.0.4"
   },
   "dependencies": {
-    "@emotion/core": "^10.3.0",
+    "@emotion/react": "^11.9.0",
     "@guardian/ab-core": "^2.0.0",
     "@guardian/ab-react": "^2.0.1",
     "@guardian/consent-management-platform": "^6.11.3",
