[RB] - add a/b test setup to manage so that tests can be run

--- a/app/package.json
+++ b/app/package.json
@@ -142,6 +142,8 @@
   },
   "dependencies": {
     "@emotion/core": "^10.3.0",
+    "@guardian/ab-core": "^2.0.0",
+    "@guardian/ab-react": "^2.0.1",
     "@guardian/consent-management-platform": "^6.11.3",
     "@guardian/libs": "^1.7.1",
     "@guardian/src-button": "^2.8.2",
