--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
     "bundle": "copy-node-modules . ./dist && yarn webpack --config webpack.production.js",
     "bundle-dev": "yarn bundle-dev-server && yarn bundle-dev-client",
     "bundle-dev-server": "webpack --config webpack.dev.server.js",
-    "bundle-dev-server-cypress": "CYPRESS=SKIP_IDAPI webpack --config webpack.dev.server.js",
+    "bundle-dev-server-cypress": "CYPRESS=true webpack --config webpack.dev.server.js",
     "bundle-dev-client": "webpack --config webpack.dev.client.js",
     "bundle-check-client": "webpack --config webpack.prod.client.bundle-check.js",
     "bundle-check-client-if-changed": "((git diff --name-only --cached | grep 'yarn.lock') && yarn bundle-check-client) || true",
