--- a/app/package.json
+++ b/app/package.json
@@ -130,6 +130,7 @@
     "sonar-scanner": "^3.1.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
+    "utility-types": "^3.10.0",
     "uuid": "^8.3.2",
     "webpack": "^5.64.0",
     "webpack-bundle-analyzer": "^4.5.0",
