--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,6 +8,7 @@
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     "jsx": "preserve" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
+    "jsxImportSource": "@emotion/react",
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     // "sourceMap": true,                     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
@@ -42,7 +43,6 @@
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     "types": [
       /* Type declaration files to be included in compilation. */
-      "@emotion/core",
       "node",
       "jest"
     ],
