--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -15,10 +15,10 @@ jobs:
 
     steps:
       - name: Checkout branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Update Snyk UI with current vulnerabilities
-        uses: snyk/actions/node@0.3.0
+        uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
