--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,23 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
+
+    # See https://docs.github.com/en/actions/security-guides/automatic-token-authentication#permissions-for-the-github_token
+    permissions:
+      # required by aws-actions/configure-aws-credentials
+      id-token: write
+      contents: read
+
     steps:
       - uses: actions/checkout@v3
+
+      # Setup AWS credentials to enable uploading to S3 for Riff-Raff.
+      # See https://github.com/aws-actions/configure-aws-credentials
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.GU_RIFF_RAFF_ROLE_ARN }}
+          aws-region: eu-west-1
+
       - uses: actions/setup-node@v3
         with:
           cache: yarn
@@ -22,6 +37,27 @@ jobs:
         run: yarn test
         working-directory: app
 
-      - name: Bundle application for deployment
+      - name: Bundle application
         run: yarn bundle
         working-directory: app
+
+      - name: Zip bundle for upload
+        run: |
+          cd dist
+          zip -r ../manage-front.zip .
+        working-directory: app
+
+      # # Seed the build number with last number from TeamCity.
+      # - name: Update GITHUB_RUN_NUMBER
+      #   run: |
+      #     LAST_TEAMCITY_BUILD=6053
+      #     echo GITHUB_RUN_NUMBER=$(( $GITHUB_RUN_NUMBER + $LAST_TEAMCITY_BUILD )) >> $GITHUB_ENV
+
+      # - name: Upload to Riff-Raff
+      #   uses: guardian/actions-riff-raff@v1
+      #   with:
+      #     dryRun: true
+      #     app: manage-frontend
+      #     buildNumber: ${{ env.GITHUB_RUN_NUMBER }}
+      #     projectName: support:manage-frontend
+      #     configPath: app/riff-raff.yaml
